force-app/main/default/objects/Lead/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>