force-app/main/default/objects/Lead/fields/BankAccountType__c.field-meta.xml
<CustomField>
    <fullName>BankAccountType__c</fullName>
    <label>Bank Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premier Business Checking</fullName>
            </value>
            <value>
                <fullName>Basic Business Checking</fullName>
            </value>
            <value>
                <fullName>Commercial Checking</fullName>
            </value>
            <value>
                <fullName>Business Line of Credit</fullName>
            </value>
            <value>
                <fullName>Business Term Loan</fullName>
            </value>
            <value>
                <fullName>Business Purpose Vehicle Loan</fullName>
            </value>
            <value>
                <fullName>Merchant Services</fullName>
            </value>
            <value>
                <fullName>Business Reserve Line</fullName>
            </value>
            <value>
                <fullName>Business MMA</fullName>
            </value>
            <value>
                <fullName>Business Savings</fullName>
            </value>
            <value>
                <fullName>Business Credit Card</fullName>
            </value>
            <value>
                <fullName>Commercial RE</fullName>
            </value>
            <value>
                <fullName>Consumer Mortgage</fullName>
            </value>
            <value>
                <fullName>Consumer Loan</fullName>
            </value>
            <value>
                <fullName>Personal Checking</fullName>
            </value>
            <value>
                <fullName>MMA</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>Annuities</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Totally Free Business Checking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>