force-app/main/default/objects/Lead/fields/Brief_Action__c.field-meta.xml
<CustomField>
    <fullName>Brief_Action__c</fullName>
    <label>Brief Action</label>
    <type>TextArea</type>
</CustomField>