force-app/main/default/objects/Lead/fields/BusinessStage__c.field-meta.xml
<CustomField>
    <fullName>BusinessStage__c</fullName>
    <label>Business Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High Growth</fullName>
            </value>
            <value>
                <fullName>Stable/Mature</fullName>
            </value>
            <value>
                <fullName>Preparing to Sell</fullName>
            </value>
            <value>
                <fullName>Startup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>