force-app/main/default/objects/Lead/fields/BusinessStructure__c.field-meta.xml
<CustomField>
    <fullName>BusinessStructure__c</fullName>
    <label>Business Structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sub S Corp</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Proprietorship</fullName>
            </value>
            <value>
                <fullName>Professional Association</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Not For Profit</fullName>
            </value>
            <value>
                <fullName>C Corp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>