force-app/main/default/objects/Lead/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Large Business</fullName>
            </value>
            <value>
                <fullName>Small Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>