force-app/main/default/objects/Lead/fields/DateBusinessStarted__c.field-meta.xml
<CustomField>
    <fullName>DateBusinessStarted__c</fullName>
    <label>Date Business Started</label>
    <length>16</length>
    <type>Text</type>
</CustomField>