force-app/main/default/objects/Lead/fields/FinServ__PotentialValue__c.field-meta.xml
<CustomField>
    <fullName>FinServ__PotentialValue__c</fullName>
    <label>Potential Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>