force-app/main/default/objects/Lead/fields/GrossAnnualSales__c.field-meta.xml
<CustomField>
    <fullName>GrossAnnualSales__c</fullName>
    <label>Gross Annual Sales</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>