force-app/main/default/objects/Lead/fields/Notes_and_Attatchments__c.field-meta.xml
<CustomField>
    <fullName>Notes_and_Attatchments__c</fullName>
    <label>Notes and Attatchments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>