force-app/main/default/objects/Lead/fields/PrimaryBankName__c.field-meta.xml
<CustomField>
    <fullName>PrimaryBankName__c</fullName>
    <label>Primary Bank Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>