force-app/main/default/objects/Lead/fields/ProductInterest__c.field-meta.xml
<CustomField>
    <fullName>ProductInterest__c</fullName>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Merchant Services</fullName>
            </value>
            <value>
                <fullName>ATM &amp; Telephone Banking</fullName>
            </value>
            <value>
                <fullName>Credit Solutions</fullName>
            </value>
            <value>
                <fullName>Payroll Services</fullName>
            </value>
            <value>
                <fullName>Cash Management</fullName>
            </value>
            <value>
                <fullName>Checking &amp; Money Market Savings</fullName>
            </value>
            <value>
                <fullName>Retirement Plans &amp; Investment</fullName>
            </value>
            <value>
                <fullName>Insurance and Employee Benefits</fullName>
            </value>
            <value>
                <fullName>International Services</fullName>
            </value>
            <value>
                <fullName>Online Servives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>