force-app/main/default/objects/Lead/fields/SingletrackCMS__Multi_Picklist_Test__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Multi_Picklist_Test__c</fullName>
    <label>Multi Picklist Test</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Four</fullName>
            </value>
            <value>
                <fullName>Five and Six</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>