force-app/main/default/objects/Lead/fields/Trading_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Trading_Prospect__c</fullName>
    <label>Trading Prospect</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Imminent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>