force-app/main/default/objects/Lead/recordTypes/Default.recordType-meta.xml
<RecordType>
    <fullName>Default</fullName>
    <active>false</active>
    <businessProcess>Default</businessProcess>
    <description>Default Lead process for all user in Standard Bank</description>
    <label>Default</label>
</RecordType>