force-app/main/default/objects/Lead/recordTypes/SingletrackCMS__Marketing_Lead.recordType-meta.xml
<RecordType>
    <fullName>SingletrackCMS__Marketing_Lead</fullName>
    <active>true</active>
    <businessProcess>SingletrackCMS__test</businessProcess>
    <label>Marketing Lead</label>
</RecordType>