force-app/main/default/objects/Lead/recordTypes/SingletrackCMS__Sales_Lead.recordType-meta.xml
<RecordType>
    <fullName>SingletrackCMS__Sales_Lead</fullName>
    <active>true</active>
    <businessProcess>SingletrackCMS__test</businessProcess>
    <label>Sales Lead</label>
</RecordType>